--- a/views/customer/show.hbs
+++ b/views/customer/show.hbs
@@ -10,7 +10,7 @@
       <a href="usuarios/{{usuario.id}}">Perfil</a>
     </li>
    </ul> 
-   <h1>Area do usuario</h1>
+   <h1>Area do cliente</h1>
    <h2>Usuario: {{usuario.nome}}</h2>
 
   </body>
