--- a/views/administrador/produto/criar.hbs
+++ b/views/administrador/produto/criar.hbs
@@ -8,7 +8,7 @@
 <body>
   <div class="container">
     <h1>Inserir Novo Produto</h1>
-    <form action="/product" method="POST">
+    <form action="/produto" method="POST">
       <input type="text" name="nome" placeholder="Nome" required />
       <input type="email" name="email" placeholder="Email" required />
       <input type="text" name="login" placeholder="Login" required />
