--- a/views/autenticacao/login.hbs
+++ b/views/autenticacao/login.hbs
@@ -8,7 +8,7 @@
 <body>
   <div class="container">
     <h1>Login</h1>
-    <form action="/auth/login" method="POST">
+    <form action="/autenticacao/login" method="POST">
       <input type="text" name="login" placeholder="Login" required />
       <input type="password" name="senha" placeholder="Senha" required />
       <button type="submit">Login</button>
