--- a/views/administrador/produto/criar.hbs
+++ b/views/administrador/produto/criar.hbs
@@ -8,15 +8,27 @@
 <body>
   <div class="container">
     <h1>Inserir Novo Produto</h1>
-    <form action="/produto" method="POST">
-      <input type="text" name="nome" placeholder="Nome" required />
-      <input type="email" name="email" placeholder="Email" required />
-      <input type="text" name="login" placeholder="Login" required />
-      <input type="password" name="senha" placeholder="Senha" required />
-      <input type="text" name="endereco" placeholder="Endereço" />
-      <input type="checkbox" name="administrador" /> Administrador
-      <button type="submit">Inserir</button>
+    <form action="/produto/criar" method="POST">
+      <label for="descricao">Descrição do Produto:</label>
+      <input type="text" id="descricao" name="descricao" placeholder="Digite a descrição do produto" required />
+
+      <label for="preco">Preço:</label>
+      <input type="number" id="preco" name="preco" step="0.01" placeholder="Digite o preço" required />
+
+      <label for="quantidade">Quantidade:</label>
+      <input type="number" id="quantidade" name="quantidade" placeholder="Digite a quantidade" required />
+
+      <label for="categoria">Categoria:</label>
+      <select name="categoria" id="categoria" required>
+        {{#each categorias}}
+          <option value="{{this.id}}">{{this.nome}}</option>
+        {{/each}}
+      </select>
+
+      <button type="submit">Salvar</button>
     </form>
+    <br>
+    <a href="/produto">Voltar para a lista</a>
   </div>
 </body>
 </html>
